--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "gattc_demo.c"
-                    PRIV_REQUIRES bt nvs_flash
+                    PRIV_REQUIRES bt nvs_flash driver
                     INCLUDE_DIRS ".")
