重构项目结构：添加统一配置头文件，模块化BLE客户端功能

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,11 @@
-idf_component_register(SRCS "gattc_demo.c"
-                    PRIV_REQUIRES bt nvs_flash driver
+idf_component_register(SRCS "main.c"
+                           "wifi_manager.c"
+                           "ntp_time.c"
+                           "gpio_button.c"
+                    PRIV_REQUIRES nvs_flash
+                                  esp_wifi
+                                  esp_netif
+                                  esp_event
+                                  driver
+                                  lwip
                     INCLUDE_DIRS ".")
