实现BLE GATT客户端核心功能：添加服务发现、特征操作和自动重连机制

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "ble_gattc.c" "main.c"
                            "wifi_manager.c"
                            "ntp_time.c"
                            "gpio_button.c"
@@ -8,4 +8,5 @@ idf_component_register(SRCS "main.c"
                                   esp_event
                                   driver
                                   lwip
+                                  bt
                     INCLUDE_DIRS ".")
